--- a/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Index.cshtml
+++ b/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Joel Hilton Film Collection";
+    ViewData["Title"] = "The Joel Hilton Film Collection";
 }
 
 <h1>Movies</h1>
@@ -11,9 +11,3 @@
 
 <img src="~/img/JHilton.jpg" height="400"/>
 
-<div>
-    <!--list of links to other pages-->
-    <a asp-controller="Home" asp-action="Movies">Fill out Movie Form</a>
-    <a href="https://baconsale.com/">My Podcasts</a>
-
-</div>
