--- a/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Movies.cshtml
+++ b/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Movies.cshtml
@@ -35,7 +35,12 @@
         <br />
 
         <label asp-for="Rating">Rating:</label>
-        <input asp-for="Rating" />
+        <select asp-for="Rating">
+            <option value="G">G</option>
+            <option value="PG">PG</option>
+            <option value="PG-13">PG-13</option>
+            <option value="R">R</option>
+        </select>
         <br />
 
         <label asp-for="Edited">Edited:</label>
