--- a/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Confirmation.cshtml
+++ b/BaconsaleWebApp/BaconsaleWebApp/Views/Home/Confirmation.cshtml
@@ -3,6 +3,6 @@
     ViewData["Title"] = "Movie Successfully Added!";
 }
 
-<h2>@Model.Title successfully added to database!</h2>
+<h2>@Model.Title Successfully added to database!</h2>
 
 
